--- a/style.tex
+++ b/style.tex
@@ -53,6 +53,9 @@
 \newcommand{\Remind}{\textbf{Напоминание.} }
 \newcommand{\Note}{\textbf{Note.} }
 \newcommand{\Statement}{\textbf{Утверждение.} }
+\newcommand{\Expl}{\textbf{Объяснение.} }
+\newcommand{\Comm}{\textbf{Комментарий.} }
+\newcommand{\Off}{\textbf{Предложение.} }
 \newcommand{\Prop}{\textbf{Свойство:} }
 \newcommand{\Props}{\textbf{Свойства:} }
 \newcommand{\Proof}{\textbf{$\square$} }
