--- a/solutions/statistics/40.tex
+++ b/solutions/statistics/40.tex
@@ -86,7 +86,7 @@
 
 \Def Пусть $\lambda > 0$. Положим критерий $S_\lambda = \condset{x \in \mathcal{X}}{p_1(x) - \lambda p_0(x) \geq 0}$.
 
-\Lem{Неймана-Пирсона} Пусть критерий $R$ таков, что $\mathbb{P}_0 (X \in R) \leq \mathbb{P}_0(X \in S_\lambda)$.
+\Lem{Неймана-Пирсона} Пусть критерий $R$ таков, что $\mathbb{P}_0 (X \in R) \leq \mathbb{P}_0(X \in S_\lambda)$. Тогда:
 \begin{enumerate}
     \item $\mathbb{P}_1(X \in R) \leq \mathbb{P}_1(X \in S_\lambda)$
     \item $\mathbb{P}_0(X \in S_\lambda) \leq \mathbb{P}_1(X \in S_\lambda)$
