--- a/solutions/statistics/40.tex
+++ b/solutions/statistics/40.tex
@@ -57,6 +57,8 @@
 
 \subsubsection{Лемма Неймана-Пирсона}
 
+\Def $A^C \overset{def}{=} \Omega \backslash A$
+
 \Def Гипотезы вида $H: \mathbb{P} = \mathbb{P}'$ будем называть простыми.
 
 Далее будем рассматривать проверку гипотезы $H_0: \mathbb{P} = \mathbb{P}_0$ против альтернативы $H_1: \mathbb{P} = \mathbb{P}_1$.
