--- a/solutions/statistics/40.tex
+++ b/solutions/statistics/40.tex
@@ -2,7 +2,7 @@
 
 \subsubsection{Определение и постановка задачи}
 
-Всюду далее $\mathcal{P}$ -- некоторое семейство распределений, которые определены на некоторой сигма-алгебре $\mathfrak{S}$ множеств из $\Omega$.
+Всюду далее $\mathcal{P}$ -- некоторое семейство распределений, которые определены на некоторой сигма-алгебре $\mathfrak{S}$ множеств из $\mathcal{X}$.
 
 \Def Пусть $\mathbb{P} \in \mathcal{P}, \mathcal{P}_0 \subset \mathcal{P}$.
 Статистической гипотезой будем называть предположение вида, что $\mathbb{P} \in \mathcal{P}_0$. Будем это обозначать $H_0: \mathbb{P} \in \mathcal{P}_0$.
