--- a/solutions/statistics/40.tex
+++ b/solutions/statistics/40.tex
@@ -17,7 +17,7 @@
 
 Всюду далее $\mathcal{P}_1 \subset \mathcal{P} \backslash \mathcal{P}_0$. $H_1: \mathbb{P} \in \mathcal{P}_1$ - альтернативная гипотеза.
 
-\Def Множество $\mathcal{X}$, которое задает всевозможные значения выборки, будем называть выборочным пространством.
+\Def Множество $\mathcal{X}$, которое задает всевозможные значения $X$, будем называть выборочным пространством.
 
 \Def Пусть $S \subset \mathcal{X}$, $\{X \in S\}$ -- $\mathfrak{S}$-измеримое множество. $S$ будем называть критическим множеством (или же критерием), если верно следующее:
 \begin{equation*}
