--- a/solutions/logic/30.tex
+++ b/solutions/logic/30.tex
@@ -6,7 +6,7 @@
 
 \Def Паросочетание называют \textit{совершенным}, если оно покрывает все вершины графа.
 
-\Def Для $X \subset V$ \textit{множеством соседей} назовем $N(X) := \{ v \in V \mid (x, y) \in E, X \in x \}$.
+\Def Для $X \subset V$ \textit{множеством соседей} назовем $N(X) := \{ y \in V \mid (x, y) \in E, x \in X \}$.
 
 \textbf{Теорема Холла.}
 
