Исправил определение кососимметричного оператора

--- a/solutions/linear/18.tex
+++ b/solutions/linear/18.tex
@@ -20,7 +20,7 @@ $A$ -- матрица $\varphi$, $A^*$ -- матрица $\varphi^*$.
 \\
 
 
-Если $\varphi = \varphi^*$, то оператор $\varphi$ называют самосопряженным, или симметричным. Если $\varphi^* = \varphi$, то оператор $\varphi$ называют кососимметричным.
+Если $\varphi = \varphi^*$, то оператор $\varphi$ называют самосопряженным, или симметричным. Если $\varphi = -\varphi^*$, то оператор $\varphi$ называют кососимметричным.
 \\
 
 \textbf{Свойства}
