Revert "Fix issue 45"
This reverts commit 07c7461007d5a5580ac8b8ed94d97970a7875b23.

--- a/solutions/linear/17.tex
+++ b/solutions/linear/17.tex
@@ -15,14 +15,12 @@
 
 $\lambda \in \mathbb{K}$ является собственным значением $\varphi$ тогда и только тогда, когда подпространство $V_\lambda$ нетривиально, т.е. состоит не только из нуль-вектора. Это эквивалентно вырожденности $\varphi - \lambda \text{Id}$. Это эквивалентно условию $\text{det}(\varphi - \lambda \text{Id}) = 0$. Это эквивалентно тому, что $\lambda \in \mathbb{K}$ --- корень характеристического многочлена $\chi_\varphi(t)$.
 
-\textbf{Теорема, оценка размерности собственного подпространства}
-
-Если \lambda - корень харакеристического многочлена кратности $ k $ ( $ \varXi(\lambda) = (\labmda_0 - \lambda)^k Q(\lambda), Q(\lambda_0) \neq 0 $ ), то размерность собственного подпространства не превосходит $ k $
+\textbf{Теорема}
+$\lambda \in \mathbb{K}$ является собственным значением линейного оператора $\varphi$ в пространстве $V$ над полем $\mathbb{K}$ для какого-то собственного вектора $\boldsymbol{v}$ тогда и только тогда, когда $\lambda$ -- корень характеристического многочлена $\chi_\varphi(t)$, принадлежащий основному полю $\mathbb{K}$.
 
 \textbf{Доказательство}
-
-Пусть $ \exists S $ ЛНЗ собственных векторов соответствующим СЗ $ \lambda_0 $: $ e_1, e_2 \dots e_S $. Дополним их до базиса $ e_1, e_2 \dots e_n $. Тогда матрица преобразования примет следующий вид в этом базисе:
-
+Покажем, что если $\lambda_0$ --- собственное значение преобразования $\varphi$, то характеристический многочлен имеет вид $p(x) = (\lambda_0 - x)^{k_0} \cdot Q(x), \quad Q(\lambda_0) \neq 0$.
+Пусть $S$ -- размерность собственного подпространства $V_0$, соответствующего $\lambda_0$. Тогда матрица преобразования примет следующий вид:
 \begin{equation*}
 \begin{gathered}
 A_\varphi =
@@ -36,14 +34,14 @@ A_\varphi =
 \end{array}
 \right)
 \\
-\Rightarrow det(A\varphi - \lambda E) = (\lambda_0 - \lambda)^S \cdot det(C - \lambda E) = (\lambda_0 - \lambda)^S Q(\lambda)
+\Rightarrow det(A\varphi - \lambda E) = (\lambda_0 - \lambda)^S \cdot det(C - \lambda E) = (\lambda_0 - \lambda)^{k_0}
 \end{gathered}
 \end{equation*}
 
-$ S $ не превосходит $ k = $ кратность $ \lambda $ в $ (\lambda_0 - \lambda)^S Q(\lambda) \Rightarrow $ существует не более $ k $ ЛНЗ собственных векторов в собственном подпространстве $ \lambda \Rightarrow \dim V_\lambda \leq k $. ЧТД
+Получили, что собственное значение должно быть корнем харакеристического многочлена, ЧТД.
 \\
 
-Пусть $\lambda \in \mathbb{K}$ -- собственное значение $\varphi$. Алгебраическая кратность $\lambda$ -- это кратность $\lambda$ как корня $\chi_\varphi(t)$. Т.е. это максимальная степень $k$, такая что $\chi_\varphi(t)$ делится на $(t-\lambda)^k$. Обозначается иногда $\mu_\varphi(\lambda)$. $ \mu_\varphi(\lambda) \leq \gamma_\varphi(\lambda) $ (как следствие предыдущей теоремы).
+Пусть $\lambda \in \mathbb{K}$ -- собственное значение $\varphi$. Алгебраическая кратность $\lambda$ -- это кратность $\lambda$ как корня $\chi_\varphi(t)$. Т.е. это максимальная степень $k$, такая что $\chi_\varphi(t)$ делится на $(t-\lambda)^k$. Обозначается иногда $\mu \varphi(\lambda)$. Геометрическая кратность собственного значения не превосходит его алгебраической кратности (как следствие предыдущей теоремы).
 
 \textbf{Диагонализируемость}
 Оператор $\varphi: V \rightarrow V$ называется диагонализируемым, если в каком-то базисе его матрица диагональна. Т.е. для $\varphi$ можно найти базис, состоящий из его собственных векторов. Это эквивалентно тому, что все пространство $V$ распалось в прямую сумму собственных подпространств всех собственных значений. Это эквивалентно тому, что сумма геометрических кратностей все собственных значений оператора равна размерности всего подпространства:
