--- a/solutions/linear/18.tex
+++ b/solutions/linear/18.tex
@@ -72,6 +72,6 @@ $\Rightarrow (x, A(y)) = 0 \Rightarrow A(y) \in \varepsilon_1^\bot \Rightarrow \
 
 \textbf{Доказательство $\Rightarrow$} $A$ -- самосопряженное преобразование $\Rightarrow$ все корни его характеристического многочлена вещественные и можно представить $V = V_1 \bigoplus \cdots \bigoplus V_n$, где $V_i$ -- собственные подпространства $\Rightarrow V - $ инвариант как сумма инвариантных подпространств.
 
-Предположим $\varepsilon \neq V \Rightarrow dim V < dim \varepsilon \Rightarrow \Rightarrow dim V^\bot >= 1$ и $V^\bot$ -- инвариант.
+Предположим $\varepsilon \neq V \Rightarrow dim V < dim \varepsilon \Rightarrow \dim V^\bot \geq 1$ и $V^\bot$ -- инвариант.
 
 В силу того, что все собственные значения вещественны и т.к. $V^\bot$ -- инвариант, то существует собственный вектор из $V^\bot$, но $V$ -- прямая сумма подпространств, и такого вектора нет, противоречие. Т.к. собственные вектора, соответствующие различным собственным значениям попарно ортогональны, то базис можно отнормировать и получить ОНБ, ЧТД.
