--- a/solutions/linear/18.tex
+++ b/solutions/linear/18.tex
@@ -66,7 +66,7 @@ $A$ -- матрица $\varphi$, $A^*$ -- матрица $\varphi^*$.
 $\Rightarrow (x, A(y)) = 0 \Rightarrow A(y) \in \varepsilon_1^\bot \Rightarrow \varepsilon_1^\bot$ -- инвариант, ЧТД.
 \\
 
-\textbf{Теорема} Преобразование $\varphi: V \rightarrow V$ самосопряжено $\Longleftrightarrow$ существует ортонормированный базис в $V$, состоящий из его собственных векторов.
+\textbf{Теорема} Преобразование $\varphi: \varepsilon \rightarrow \varepsilon$ самосопряжено $\Longleftrightarrow$ существует ортонормированный базис в $\varepsilon$, состоящий из его собственных векторов.
 
 \textbf{Доказательство $\Leftarrow$} В одну сторону очевидно, (и в другую тоже очевидно), в базисе из собственных векторов матрица $A$ симметрична, а значит, преобразование самосопряжено.
 
