--- a/problems/linear.tex
+++ b/problems/linear.tex
@@ -15,34 +15,21 @@
 
 \textbf{Шаг 1. Находим направляющий вектор прямой.}
 
-Направляющий вектор прямой перпендикулярен нормальным векторам обеих плоскостей. Найдём его как векторное произведение нормалей.
-
-Нормаль к первой плоскости: $\vec{n}_1 = (2, 3, -1)$.
-
-Нормаль ко второй плоскости: $\vec{n}_2 = (4, 1, -1)$.
-
-Направляющий вектор прямой:
+Направляющий вектор прямой — это ненулевой вектор из ядра матрицы $A$, т.е. решение однородной системы $Ad = 0$
 \[
-\vec{s} = \vec{n}_1 \times \vec{n}_2 = 
-\begin{vmatrix}
-\vec{i} & \vec{j} & \vec{k} \\
-2 & 3 & -1 \\
-4 & 1 & -1
-\end{vmatrix}.
-\]
-
-Вычисляем:
-\[
-\vec{s} = \vec{i}(3 \cdot (-1) - (-1) \cdot 1) - \vec{j}(2 \cdot (-1) - (-1) \cdot 4) + \vec{k}(2 \cdot 1 - 3 \cdot 4).
+\begin{cases}
+2a + 3b - c = 0 \\
+4a + b - c = 0
+\end{cases} \text{, где} \ d = (a, b, c)
 \]
 \[
-\vec{s} = \vec{i}(-3 + 1) - \vec{j}(-2 + 4) + \vec{k}(2 - 12) = -2\vec{i} - 2\vec{j} - 10\vec{k}.
+(1) - (2) \Rightarrow -2a + 2b = 0 \Leftrightarrow a = b
 \]
-
-Упрощаем (делим на $-2$):
+Подставляя, получим
 \[
-\vec{s} = (1, 1, 5).
+5a - c = 0 \Leftrightarrow c = 5a
 \]
+Таким образом имеем вектор $d = a (1, 1, 5), a \in \R$. Можно взять $a = 1 \Rightarrow d = (1, 1, 5)$ 
 
 \textbf{Шаг 2. Находим точку на прямой.}
 
@@ -77,26 +64,7 @@ y = -2 - 4 \cdot \left(-\frac{4}{5}\right) = -2 + \frac{16}{5} = \frac{-10 + 16}
 
 Подставляем:
 \[
-\frac{x + \frac{4}{5}}{1} = \frac{y - \frac{6}{5}}{1} = \frac{z - 0}{5}.
-\]
-
-Или в более привычной форме (умножим на 5):
-\[
-\boxed{\frac{x + \frac{4}{5}}{1} = \frac{y - \frac{6}{5}}{1} = \frac{z}{5}}.
-\]
-
-Альтернативная запись с целыми числами (сдвигаем точку): можно взять другую точку. При $x = 1$:
-
-Из $2 \cdot 1 + 3y - z - 2 = 0$ получаем $3y - z = 0$.
-Из $4 \cdot 1 + y - z + 2 = 0$ получаем $y - z = -6$.
-
-Вычитаем: $2y = 6$, $y = 3$, $z = 9$.
-
-Точка $M_1 = (1, 3, 9)$.
-
-\textbf{Ответ:}
-\[
-\frac{x - 1}{1} = \frac{y - 3}{1} = \frac{z - 9}{5}.
+\boxed{\frac{x + \frac{4}{5}}{1} = \frac{y - \frac{6}{5}}{1} = \frac{z - 0}{5}}
 \]
 
 \subsubsection{9. Система линейных уравнений}
