--- a/problems/linear.tex
+++ b/problems/linear.tex
@@ -90,80 +90,34 @@ y = -2 - 4 \cdot \left(-\frac{4}{5}\right) = -2 + \frac{16}{5} = \frac{-10 + 16}
 \right)
 \]
 
-\textbf{Шаг 2. Приводим к ступенчатому виду методом Гаусса.}
+Заметим, что в матрице достаточно удачно уже выражены $x_4, x_5$, таким образом что они не зависят друг от друга. Можем положить их базисными переменными, а свободными оставить остальные (т.к ранг матрицы - 2, необходимо ровно 2 базисных переменных).
 
-Умножим первую строку на 2, вторую на 3, затем сложим:
-
-$(I) \cdot 2$: $(6, 4, 2, -2, 0 \mid 14)$
-
-$(II) \cdot 3$: $(-6, 9, 36, 0, 6 \mid 54)$
-
-$(I) \cdot 2 + (II) \cdot 3$: $(0, 13, 38, -2, 6 \mid 68)$
-
-Новая матрица:
-\[
-\left(
-\begin{array}{ccccc|c}
-3 & 2 & 1 & -1 & 0 & 7 \\
-0 & 13 & 38 & -2 & 6 & 68
-\end{array}
-\right)
-\]
-
-\textbf{Шаг 3. Выражаем базисные переменные.}
-
-Ранг матрицы = 2. Базисные переменные: $x_1$, $x_2$. Свободные переменные: $x_3$, $x_4$, $x_5$.
-
-Из второй строки:
-\[
-13x_2 + 38x_3 - 2x_4 + 6x_5 = 68.
-\]
-\[
-x_2 = \frac{68 - 38x_3 + 2x_4 - 6x_5}{13}.
-\]
-
-Из первой строки:
-\[
-3x_1 + 2x_2 + x_3 - x_4 = 7.
-\]
-\[
-x_1 = \frac{7 - 2x_2 - x_3 + x_4}{3}.
-\]
-
-Подставим $x_2$:
-\[
-x_1 = \frac{7 - \frac{2(68 - 38x_3 + 2x_4 - 6x_5)}{13} - x_3 + x_4}{3}.
-\]
-
-Упрощаем:
-\[
-x_1 = \frac{1}{3} \left( 7 - x_3 + x_4 - \frac{136 - 76x_3 + 4x_4 - 12x_5}{13} \right).
-\]
+\textbf{Шаг 2. Выражаем базисные переменные.}
 
 \[
-x_1 = \frac{1}{3} \cdot \frac{91 - 13x_3 + 13x_4 - 136 + 76x_3 - 4x_4 + 12x_5}{13}.
+x_4 = 3x_1 + 2x_2 + x_3 - 7
+\]
+\[
+x_5 = x_1 - 1.5x_2 - 6x_3 + 9
 \]
 
-\[
-x_1 = \frac{-45 + 63x_3 + 9x_4 + 12x_5}{39} = \frac{-15 + 21x_3 + 3x_4 + 4x_5}{13}.
-\]
 
 \textbf{Шаг 4. Общее решение.}
 
-Обозначим $x_3 = t$, $x_4 = s$, $x_5 = u$ — свободные параметры.
+Обозначим $x_1 = t$, $x_2 = s$, $x_3 = u$ — свободные параметры.
 
 \[
-x_1 = \frac{-15 + 21t + 3s + 4u}{13}, \quad x_2 = \frac{68 - 38t + 2s - 6u}{13}.
+x_4 = 3t + 2s + u - 7, \quad x_5 = t - 1.5s - 6u + 9.
 \]
 
 \textbf{Шаг 5. Частное решение.}
 
 При $t = s = u = 0$:
 \[
-x_1 = \frac{-15}{13}, \quad x_2 = \frac{68}{13}, \quad x_3 = 0, \quad x_4 = 0, \quad x_5 = 0.
+x_1 = 0, \quad x_2 = 0, \quad x_3 = 0, \quad x_4 = -7, \quad x_5 = 9.
 \]
 
-Частное решение: $\vec{x}_{\text{ч}} = \left( -\frac{15}{13}, \frac{68}{13}, 0, 0, 0 \right)$.
+Частное решение: $\vec{x}_{\text{ч}} = \left( 0, 0, 0, -7, 9 \right)$.
 
 \textbf{Шаг 6. ФСР однородной системы.}
 
@@ -171,43 +125,24 @@ x_1 = \frac{-15}{13}, \quad x_2 = \frac{68}{13}, \quad x_3 = 0, \quad x_4 = 0, \
 
 Общее решение однородной системы:
 \[
-x_1 = \frac{21t + 3s + 4u}{13}, \quad x_2 = \frac{-38t + 2s - 6u}{13}, \quad x_3 = t, \quad x_4 = s, \quad x_5 = u.
+x_1 = t, \quad x_2 = s, \quad x_3 = u, \quad x_4 = 3t + 2s + u, \quad x_5 = t - 1.5s - 6u.
 \]
 
-ФСР состоит из трёх векторов (по числу свободных переменных):
+ФСР состоит из трёх векторов (по числу свободных переменных, или же $k = n - r = 5 - 2 = 3$):
 
 При $t = 1, s = 0, u = 0$:
 \[
-\vec{e}_1 = \left( \frac{21}{13}, -\frac{38}{13}, 1, 0, 0 \right).
+\vec{e}_1 = \left( 1, 0, 0, 3, 1 \right).
 \]
 
 При $t = 0, s = 1, u = 0$:
 \[
-\vec{e}_2 = \left( \frac{3}{13}, \frac{2}{13}, 0, 1, 0 \right).
+\vec{e}_2 = \left( 0, 1, 0, 2, -3/2 \right).
 \]
 
 При $t = 0, s = 0, u = 1$:
 \[
-\vec{e}_3 = \left( \frac{4}{13}, -\frac{6}{13}, 0, 0, 1 \right).
-\]
-
-\textbf{Ответ.}
-
-\textit{Частное решение:}
-\[
-\vec{x}_{\text{ч}} = \left( -\frac{15}{13}, \frac{68}{13}, 0, 0, 0 \right).
-\]
-
-\textit{ФСР однородной системы:}
-\[
-\vec{e}_1 = \left( \frac{21}{13}, -\frac{38}{13}, 1, 0, 0 \right), \quad
-\vec{e}_2 = \left( \frac{3}{13}, \frac{2}{13}, 0, 1, 0 \right), \quad
-\vec{e}_3 = \left( \frac{4}{13}, -\frac{6}{13}, 0, 0, 1 \right).
-\]
-
-\textit{Общее решение:}
-\[
-\vec{x} = \vec{x}_{\text{ч}} + c_1 \vec{e}_1 + c_2 \vec{e}_2 + c_3 \vec{e}_3, \quad c_1, c_2, c_3 \in \mathbb{R}.
+\vec{e}_3 = \left( 0, 0, 1, 1, -6 \right).
 \]
 
 \subsubsection{10. Ортогональное дополнение подпространства}
@@ -225,73 +160,47 @@ x_1 = \frac{21t + 3s + 4u}{13}, \quad x_2 = \frac{-38t + 2s - 6u}{13}, \quad x_3
 
 \textbf{Теоретическая основа.}
 
-Пусть $L = \{x \in \R^n : Ax = 0\}$ — ядро линейного отображения, заданного матрицей $A$. Тогда:
+Ортогональное дополнение есть множество векторов, таких, что каждый вектор из множества ортогонален всем векторам из $L$. Т.е можно записать это так:
 \[
-L^\perp = \text{Im}(A^T) = \text{Lin}(\text{строки } A).
+\begin{cases}
+  (a_1, x) = 0 \\
+  (a_2, x) = 0
+\end{cases} \Leftrightarrow Ax = 0
 \]
 
-Это следует из того, что $x \in L$ означает $\langle a_i, x \rangle = 0$ для всех строк $a_i$ матрицы $A$, т.е. $x$ ортогонален всем строкам $A$.
-
-\textbf{Шаг 1. Записываем строки матрицы.}
-
-Матрица $A$ имеет строки:
-\[
-a_1 = (1, 1, 1, -17), \quad a_2 = (2, -13, 0, 1).
-\]
-
-\textbf{Шаг 2. Проверяем линейную независимость.}
-
-Строки $a_1$ и $a_2$ линейно независимы (ни одна не пропорциональна другой), поэтому $\dim L^\perp = 2$.
-
-\textbf{Шаг 3. Формируем базис.}
-
-Базис $L^\perp$ состоит из строк матрицы $A$:
-\[
-e_1 = (1, 1, 1, -17), \quad e_2 = (2, -13, 0, 1).
-\]
-
-\textbf{Шаг 4 (необязательный). Ортогонализация.}
-
-Если требуется ортогональный (или ортонормированный) базис, применяем процесс Грама–Шмидта.
-
-Оставляем $f_1 = e_1 = (1, 1, 1, -17)$.
-
-Вычисляем $f_2 = e_2 - \text{proj}_{f_1} e_2$:
-\[
-\text{proj}_{f_1} e_2 = \frac{\langle e_2, f_1 \rangle}{\langle f_1, f_1 \rangle} f_1.
-\]
-
-Вычислим скалярные произведения:
-\[
-\langle e_2, f_1 \rangle = 2 \cdot 1 + (-13) \cdot 1 + 0 \cdot 1 + 1 \cdot (-17) = 2 - 13 + 0 - 17 = -28.
-\]
-\[
-\langle f_1, f_1 \rangle = 1^2 + 1^2 + 1^2 + (-17)^2 = 1 + 1 + 1 + 289 = 292.
-\]
+Это пространство можно задать $n-k = 4 - 2 = 2$ векторами $b_i$, такими, что для каждого из них верно $(b_i, a_j) = 0 \ \forall i, j$, а также эти векторы должны быть ЛНЗ. Но мы же буквально написали определение ФСР. То есть задача свелась к нахождению ФСР системы $A$. Сделаем это
 
 \[
-\text{proj}_{f_1} e_2 = \frac{-28}{292} f_1 = -\frac{7}{73} (1, 1, 1, -17) = \left( -\frac{7}{73}, -\frac{7}{73}, -\frac{7}{73}, \frac{119}{73} \right).
+\begin{pmatrix}
+  1 & 1 & 1 & -17 \\
+  2 & -13 & 0 & 1
+\end{pmatrix} \sim 
+\begin{pmatrix}
+  0 & 15 & 2 & -35 \\
+  2 & -13 & 0 & 1 
+\end{pmatrix}
 \]
-
+Возьмем $x_1, x_3$ как базисные, $x_2, x_4$ как свободные:
 \[
-f_2 = e_2 - \text{proj}_{f_1} e_2 = \left( 2 + \frac{7}{73}, -13 + \frac{7}{73}, 0 + \frac{7}{73}, 1 - \frac{119}{73} \right).
+x_1 = 6.5 s - 0.5 t \quad x_3 = -7.5 s + 17.5 t \quad x_2 = s \quad x_4 = t
 \]
+Осталось просто написать ФСР:
+\begin{enumerate}
+  \item $s = 1, t = 0$
+  \[
+  (6.5, 1, -7.5, 0) \sim (13, 2, -15, 0)
+  \]
+  \item $s = 0, t = 1$
+  \[
+  (-0.5, 0, 17.5, 1) \sim (-1, 0, 35, 2)
+  \]
+\end{enumerate}
+
+Это и есть базис в $L^T$ по утверждениям в начале.
 \[
-f_2 = \left( \frac{153}{73}, -\frac{942}{73}, \frac{7}{73}, -\frac{46}{73} \right) = \frac{1}{73}(153, -942, 7, -46).
+\begin{pmatrix}
+  13 & 2 & -15 & 0 \\
+  -1 & 0 & 35 & 2
+\end{pmatrix}
 \]
-
-Можно упростить, взяв $f_2 = (153, -942, 7, -46)$.
-
-\textbf{Ответ.}
-
-\textit{Базис $L^\perp$:}
-\[
-e_1 = (1, 1, 1, -17), \quad e_2 = (2, -13, 0, 1).
-\]
-
-\textit{Ортогональный базис $L^\perp$ (если требуется):}
-\[
-f_1 = (1, 1, 1, -17), \quad f_2 = (153, -942, 7, -46).
-\]
-
-\textbf{Проверка.} $\dim L = 4 - 2 = 2$ (т.к. ранг матрицы $A$ равен 2). Тогда $\dim L^\perp = 4 - 2 = 2$.
+Несложно в этом убедиться, посчитав в уме скалярные произведения.
