fix harmonic problem

--- a/problems/harmonic.tex
+++ b/problems/harmonic.tex
@@ -102,15 +102,15 @@ f(x) = \frac{5}{2} + x.
 
 \textbf{Шаг 6. Исследование на равномерную сходимость.}
 
-\textbf{Достаточное условие:} если $2\pi$-периодическая функция непрерывна и удовлетворяет условию Липшица (например, кусочно-линейна), то её ряд Фурье сходится к ней равномерно.
+\textbf{Достаточное условие:} если $2\pi$-периодическая кусочно-гладкая функция (т.е непрерывна, а производная кусочно непрерывна), то её ряд Фурье сходится к ней равномерно.
 
 Проверим условия для $\tilde{f}(x)$:
 
 \begin{enumerate}
     \item \textbf{Непрерывность:} $\tilde{f}(x)$ непрерывна на $\R$ (проверено выше).
     
-    \item \textbf{Кусочная гладкость:} На каждом интервале $\left(-5, -\frac{5}{2}\right)$, $\left(-\frac{5}{2}, 0\right)$, $\left(0, \frac{5}{2}\right)$, $\left(\frac{5}{2}, 5\right)$ функция линейна, следовательно, бесконечно дифференцируема. В точках излома $x = 0, \pm\frac{5}{2}, \pm 5$ существуют односторонние производные.
+    \item \textbf{Кусочная гладкость:} На каждом интервале $\left(-5, 0\right)$, $\left(0, 5\right)$ функция линейна, следовательно, бесконечно дифференцируема. В точке излома $x = 0. x = \pm 5$ существуют односторонние производные.
 \end{enumerate}
 
-\textbf{Вывод:} Ряд Фурье функции $\tilde{f}(x)$ сходится равномерно на $\R$.
+\textbf{Вывод:} Ряд Фурье функции $\tilde{f}(x)$ сходится равномерно на $[-5, 5]$.
 
